# ansys-tools-filetransfer-server

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  README.rst  index.html  pyproject.toml  requirements_dev.txt  robots.txt  sitemap.xml  versions.json
.ci/: check-version-consistency.py
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  package_cleanup.yml
conan/: conanfile.txt  linux_x86_64_Release  windows_x86_64_Release
conan/linux/: conanfile.txt  linux_x86_64_Release
conan/windows/: conanfile.txt  windows_x86_64_Release
doc/: .gitignore  Makefile  make.bat
doc/doxygen/: .gitignore  Doxyfile  Makefile
doc/source/: conf.py  contribute.rst  contributing.rst  devdocs.rst  index.rst  intro.rst  users_guide.rst
doc/styles/Vocab/ANSYS/: accept.txt
docker/: Dockerfile
src/: CMakeLists.txt  filetransfer_service.cpp  filetransfer_service.h  server.cpp
src/lib/: CMakeLists.txt  exception_handling.cpp  exception_handling.h  exception_types.h  filetransfer_service.h  filetransfer_service_delete.cpp  filetransfer_service_download.cpp  filetransfer_service_info.cpp  filetransfer_service_upload.cpp  sha1_digest.cpp  sha1_digest.h
test/: CMakeLists.txt  test_sha.cpp  test_utils.cpp  test_utils.h
test/data/: non-empty-file
version/: index.html
version/0.1/: .buildinfo  announcement.html  contribute.html  genindex.html  index.html  intro.html  objects.inv  searchindex.js
version/0.1/_sources/: index.rst.txt
version/0.2/: contribute.html  genindex.html  index.html  intro.html  search.html
version/0.2/_sources/: intro.rst.txt
version/dev/: .buildinfo  contribute.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
version/dev/_sources/: intro.rst.txt
version/dev/_static/: search.json
version/stable/: index.html  objects.inv  search.html  searchindex.js
version/stable/_static/: search.json
