# NOTE:
# The Poetry setup is used only for development dependencies, since
# this is primarily a C++ project.

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
conan = "^2.8.1"
Sphinx = "^8.1.3"
ansys-sphinx-theme = "^1.1.6"
breathe = "^4.35.0"
sphinx-design = "^0.6.1"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
