[project]
name = ""
version = "0.0.1"
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "conan>=2.24.0,<3",
    "Sphinx>=8.1.3,<9",
    "ansys-sphinx-theme>=1.6.4,<2",
    "breathe>=4.35.0,<5",
    "sphinx-design>=0.6.1,<0.7",
    "sphinx-copybutton>=0.5.2,<0.6",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
